--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 	    <h2>Mobile Prototype</h2>
 	    <object width="480" height="385"><param name="movie" value="http://www.youtube.com/v/5PWTlUTprr8?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="opaque"></param><embed src="http://www.youtube.com/v/5PWTlUTprr8?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="385" wmode="opaque"></embed></object>
-
+		<br/><br/><a href="http://www.youtube.com/v/5PWTlUTprr8">Youtube Link</a>
 	    <div id="why" class="section">
 		<br />
 		<a name="why">&nbsp;</a>
