Cleaned up unused libraries, updated content

--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css' />
 
-    <script type="text/javascript" src="js/prototype.js"></script>
-    <script type="text/javascript" src="js/scriptaculous.js?load=effects,builder"></script>
+
     <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
-    <!--script type="text/javascript" src="js/lightbox.js"></script-->
-
-	<!--script type="text/javascript" src="js/thickbox-compressed.js"></script-->
-
-    <!--link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" /-->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-	<!--link rel="stylesheet" href="css/thickbox.css" type="text/css" media="screen" /-->
 	<script type="text/javascript" src="js/slimbox2.js"></script>
 	<link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />
     <script type="text/javascript">
@@ -84,7 +77,7 @@
 		<a name="what">&nbsp;</a>
 		<h2>What?</h2>
 		<div class="section_desc">
-		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. <br /><br /><p>CoursesIllinois is an alternative to Illinois Compass that doesn't suck.</p>
+		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. <br /><br /><p>CoursesIllinois is an alternative to Compass built by students and teachers.</p>
 		</div>
 		<div name="left_column" class="column">
 		    <h3>Teachers</h3>
