Added tooltips to content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript" src="js/slimbox2.js"></script>
+	<script type="text/javascript" src="js/jquery.tipsy.js"></script>
 	<link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/tipsy.css" type="text/css" media="screen" />
 	
     <script type="text/javascript">
 	    // Google analytics script
@@ -67,8 +69,8 @@
 		    <h3>Teachers</h3>
 		    <div class="subsec_text">
 			<ul>
-				<li><p class="headline">Real-Time Feedback</p><p class="subtext">With real-time feedback charts such as average homework completion times and student satisfaction polls, instantaneous evaluation and adaptation has never been easier.</p> </li>
-				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">No training required, this is so easy to use my grandmother can use it. Clear charts and tabs make site navigation a breeze. You don't have to dig around for what you need.</p></li>
+				<li><p class="headline">Real-Time Feedback</p><p class="subtext">Instantaneous course evaluation and adaptation like <u class="tip" original-title="Real-time feedback charts such as average homework completion times, student satisfaction polls, and knowing who got your announcements changes the way you teach.">never before</u>.</p> </li>
+				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">No training required, this is so <u class="tip" original-title="Clear charts and tabs make site navigation a breeze. You don't have to dig around for what you need.">easy</u> to use my grandmother can use it. </p></li>
 				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We know change can be annoying, so our plugins let you make announcements straight from Outlook or your inbox.</p></li>
 				<li><p class="headline">Pre-built course websites</p><p class="subtext">Consistency and easy set up allows for more time spent planning the curriculum than building a website.</p> </li>
 			</ul>
@@ -84,10 +86,10 @@
 		    <h3>Students</h3>
 		    <div class="subsec_text">
 			<ul>
-				<li><p class="headline">Streamlined announcement system</p><p class="subtext">A system so smart it makes your to-do lists and schedule for you. Versatile enough to send announcements through email, SMS, or our mobile application.a</p></li>
-				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Find the information you need to know wherever you are and whenever you want it. Students can remain connected, even away from the computer. </p></li>
-				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates to set up study sessions to collaborate with each other. Works with Facebook integration so we can find your friends-- in a non creepy sort of way.</p></li>
-				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to. Students can "upvote" questions so instructors can address the most popular ones first. </p></li>
+				<li><p class="headline">Streamlined announcement system</p><p class="subtext">A system so smart it makes your to-do lists and schedule for you. Versatile enough to send announcements through email, SMS, or our mobile application.</p></li>
+				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Students can remain <u class="tip" original-title="Find the information you need to know wherever you are and whenever you want it. ">connected</u>, even away from the computer.</p></li>
+				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates to set up study sessions to collaborate with each other. Works with Facebook integration so we can find your friends-- in a non <u class="tip" original-title="Creepiness varies depending on user">creepy</u> sort of way.</p></li>
+				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around <u class="tip"  original-title="Students can 'upvote' questions so instructors can address the most popular ones first. ">question ranking</u> and tagging so you can find the right questions when you need to. </p></li>
 			</ul>
 		    </div>
 		</div>
