Sized tooltip fonts and added some content (alliteration) Closed #9

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. <br /><br /><p>CoursesIllinois is an alternative to Compass built by students and teachers.</p>
 		</div>
 		<div name="left_column" class="column">
-		    <h3>Teachers</h3>
+		    <h3>Teachers</h3><p class='subtext'>Access. Adapt. Answer.</p>
 		    <div class="subsec_text">
 			<ul>
-				<li><p class="headline">Real-Time Feedback</p><p class="subtext">Instantaneous course evaluation and adaptation like <u class="tip" original-title="Real-time feedback charts such as average homework completion times, student satisfaction polls, and knowing who got your announcements changes the way you teach.">never before</u>.</p> </li>
-				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">No training required, this is so <u class="tip" original-title="Clear charts and tabs make site navigation a breeze. You don't have to dig around for what you need.">easy</u> to use my grandmother can use it. </p></li>
+				<li><p class="headline">Real-Time Feedback</p><p class="subtext">Instantaneous course evaluation and adaptation like <u class="tip" original-title="<p class='tooltip'>Real-time feedback charts such as average homework completion times, student satisfaction polls, and knowing who got your announcements changes the way you teach.</p>">never before</u>. A new way to receive anonymous suggestions from students.</p></li>
+				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">No training required, this is so <u class="tip" original-title="<p class='tooltip'>Clear charts and tabs make site navigation a breeze. You don't have to dig around for what you need.</p>">easy</u> to use my grandmother can use it. </p></li>
 				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We know change can be annoying, so our plugins let you make announcements straight from Outlook or your inbox.</p></li>
 				<li><p class="headline">Pre-built course websites</p><p class="subtext">Consistency and easy set up allows for more time spent planning the curriculum than building a website.</p> </li>
 			</ul>
@@ -83,13 +83,13 @@
 		    <a  rel="lightbox" href="images/teacherstats.png">
 			<img src="images/image1.png" class="thumbnail" alt="A sample screenshot" />
 		    </a>
-		    <h3>Students</h3>
+		    <h3>Students</h3><p class='subtext'>Connect. Control. Concentrate. </p>
 		    <div class="subsec_text">
 			<ul>
 				<li><p class="headline">Streamlined announcement system</p><p class="subtext">A system so smart it makes your to-do lists and schedule for you. Versatile enough to send announcements through email, SMS, or our mobile application.</p></li>
-				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Students can remain <u class="tip" original-title="Find the information you need to know wherever you are and whenever you want it. ">connected</u>, even away from the computer.</p></li>
-				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates to set up study sessions to collaborate with each other. Works with Facebook integration so we can find your friends-- in a non <u class="tip" original-title="Creepiness varies depending on user">creepy</u> sort of way.</p></li>
-				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around <u class="tip"  original-title="Students can 'upvote' questions so instructors can address the most popular ones first. ">question ranking</u> and tagging so you can find the right questions when you need to. </p></li>
+				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Students can remain <u class="tip" original-title="<p class='tooltip'>Find the information you need to know wherever you are and whenever you want it. </p>">connected</u>, even away from the computer.</p></li>
+				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates to set up study sessions to collaborate with each other. Works with Facebook integration so we can find your friends-- in a non <u class="tip" original-title="<p class='tooltip'>Creepiness varies depending on user</p>">creepy</u> sort of way.</p></li>
+				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around <u class="tip"  original-title="<p class='tooltip'>Students can 'upvote' questions so instructors can address the most popular ones first.</p>">question ranking</u> and tagging so you can find the right questions when you need to. </p></li>
 			</ul>
 		    </div>
 		</div>
