dynamically calculates toolbar position

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		    <h3>Teachers</h3><p class='subtext'>Access. Adapt. Answer.</p>
 		    <div class="subsec_text">
 			<ul>
-				<li><p class="headline">Real-Time Feedback</p><p class="subtext">Instantaneous course evaluation and adaptation like <u class="tip" original-title="<p class='tooltip'>Real-time feedback charts such as average homework completion times, student satisfaction polls, and knowing who got your announcements changes the way you teach.</p>">never before</u>. A new way to receive anonymous suggestions from students.</p></li>
+				<li><p class="headline">Real-Time Feedback</p><p class="subtext">Instantaneous course evaluation and adaptation like <u class="tip" original-title="<p class='tooltip'>Real-time feedback charts such as average homework completion times, student satisfaction polls, and knowing who got your announcements changes the way you teach.</p>">never before</u>. A new way to receive anonymous feedback from students.</p></li>
 				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">No training required, this is so <u class="tip" original-title="<p class='tooltip'>Clear charts and tabs make site navigation a breeze. You don't have to dig around for what you need.</p>">easy</u> to use my grandmother can use it. </p></li>
 				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We know change can be annoying, so our plugins let you make announcements straight from Outlook or your inbox.</p></li>
 				<li><p class="headline">Pre-built course websites</p><p class="subtext">Consistency and easy set up allows for more time spent planning the curriculum than building a website.</p> </li>
