Added scrollTo library, doesn't seem to work though..

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript" src="js/slimbox2.js"></script>
 	<script type="text/javascript" src="js/jquery.tipsy.js"></script>
+	<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
 	<link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/tipsy.css" type="text/css" media="screen" />
 	
@@ -44,13 +45,13 @@
 <div id="toolbar" class="nav_container">
     <div class="nav">
 	<div class="button_container">
-	    <a id="what_link" href="#what" class="button"></a>
+	    <a id="what_link" href="#" class="button"></a>
 	</div>
 	<div class="button_container">
-	    <a id="why_link" href="#why"  class="button"></a>
+	    <a id="why_link" href="#"  class="button"></a>
 	</div>
 	<div class="button_container">
-	    <a id="who_link" href="#who"  class="button"></a>
+	    <a id="who_link" href="#"  class="button"></a>
 	</div>
     </div>
 </div>
