Added zuckerberg video and additional content

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 <div id="toolbar" class="nav_container">
     <div class="nav">
 	<div class="button_container">
-	    <a id="what_link" href="#" class="button"></a>
+	    <a id="what_link" href="#what" class="button"></a>
 	</div>
 	<div class="button_container">
-	    <a id="why_link" href="#"  class="button"></a>
+	    <a id="why_link" href="#why"  class="button"></a>
 	</div>
 	<div class="button_container">
-	    <a id="who_link" href="#"  class="button"></a>
+	    <a id="who_link" href="#who"  class="button"></a>
 	</div>
     </div>
 </div>
@@ -107,7 +107,10 @@
 		   The inspiration of our product came from the pain and frustrations we face as students with existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We asked other students if they had the same problems. Check out what they wrote in 24 hours below.<br /><br /> <p>We want to build a brand new innovative system that solves these problems, and then some.</p>
 		</div>
 		<a rel="lightbox" href="images/feedback1.png"><img src="images/feedback1_sm.png" class="thumbnail" alt="Real students' complaints." style="margin-right:20px;"/></a>
-		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" class="thumbnail" alt="Current systems don't work."/></a>
+		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" class="thumbnail" alt="Current systems don't work."/></a><div class="section_desc">
+		<br /><br />Educational software has lagged far behind the evolution of web applications for far too long. We need to redesign the whole system around real academics and their needs. Don't believe us? Maybe you'll believe CEO of Facebook, Mark Zuckerberg.</div>
+		<br />
+		<object width="480" height="385"><param name="movie" value="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="385"></embed></object>
 	    </div>
 	
 	    <div id="who" class="section">
