slight content tweak

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<h2>Who?</h2>
 		<div class="section_desc">
 		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging leaders in education software. 
-		<br /><br />Get involved. <a href="mailto:hello@coursesillinois.com">hello@CoursesIllinois.com</a>.
+		<br /><br />Get involved. Say <a href="mailto:hello@coursesillinois.com">hello@CoursesIllinois.com</a>.
 		</div>
 	    </div>
 	</div>
