added more tooltips

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		</div>
 		<a rel="lightbox" href="images/feedback1.png"><img src="images/feedback1_sm.png" class="thumbnail" alt="Real students' complaints." style="margin-right:20px;"/></a>
 		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" class="thumbnail" alt="Current systems don't work."/></a><div class="section_desc">
-		<br /><br />Educational software has lagged far behind the evolution of web applications for far too long. We need to redesign the whole system around real academics and their needs. Don't believe us? Maybe you'll believe CEO of Facebook, Mark Zuckerberg.</div>
+		<br /><br />Educational software has lagged far behind the evolution of web applications for far too long. We need to redesign the whole system around  academics and their real needs. Don't believe us? Maybe you'll believe CEO of Facebook, Mark Zuckerberg.</div>
 		<br />
 		<object width="480" height="385"><param name="movie" value="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="385"></embed></object>
 	    </div>
@@ -117,7 +117,7 @@
 		<a name="who">&nbsp;</a>
 		<h2>Who?</h2>
 		<div class="section_desc">
-		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging leaders in education software. 
+		   CoursesIllinois is currently being built by <u class="tip" original-title="From the University of Illinois, Carnegie Mellon, and the University of Chicago">talented students</u> under the guidance of accomplished faculty members and emerging leaders in education software. 
 		<br /><br />Get involved. Say <a href="mailto:hello@coursesillinois.com">hello@CoursesIllinois.com</a>.
 		</div>
 	    </div>
