added more content

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<a name="who">&nbsp;</a>
 		<h2>Who?</h2>
 		<div class="section_desc">
-		   CoursesIllinois is currently being built by <u class="tip" original-title="From the University of Illinois, Carnegie Mellon, and the University of Chicago">talented students</u> under the guidance of accomplished faculty members and emerging leaders in education software. 
+		   CoursesIllinois is currently being built by <u class="tip" original-title="<p class='tooltip'>From the University of Illinois, Carnegie Mellon, and the University of Chicago</p>">talented students</u> under the guidance of accomplished faculty members and emerging leaders in education software. 
 		<br /><br />Get involved. Say <a href="mailto:hello@coursesillinois.com">hello@CoursesIllinois.com</a>.
 		</div>
 	    </div>
