--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
-	<script type="text/javascript" src="js/slimbox2.js"></script>
-	<script type="text/javascript" src="js/jquery.tipsy.js"></script>
-	<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
-	<link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/tipsy.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="js/slimbox2.js"></script>
+    <script type="text/javascript" src="js/jquery.tipsy.js"></script>
+    <script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
+
+    <link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/tipsy.css" type="text/css" media="screen" />
 	
     <script type="text/javascript">
 	    // Google analytics script
@@ -26,6 +27,7 @@
       })();
 
     </script>
+    <script type="text/javascript" src="js/setup.js"></script>
 </head>
 
 <body>
@@ -110,7 +112,7 @@
 		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" class="thumbnail" alt="Current systems don't work."/></a><div class="section_desc">
 		<br /><br />Educational software has lagged far behind the evolution of web applications for far too long. We need to redesign the whole system around  academics and their real needs. Don't believe us? Maybe you'll believe CEO of Facebook, Mark Zuckerberg.</div>
 		<br />
-		<object width="480" height="385"><param name="movie" value="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="385"></embed></object>
+		<object width="480" height="385"><param name="movie" value="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="opaque"></param><embed src="http://www.youtube.com/v/hQYfx7gWuDU?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" wmode="opaque" width="480" height="385"></embed></object>
 	    </div>
 	
 	    <div id="who" class="section">
@@ -126,7 +128,6 @@
 	<div class="footer">
 	</div>
 </div>
-<script type="text/javascript" src="js/setup.js"></script>
 
 </body>
 </html>
