fixed missing slimbox

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	
 	<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
     <script type="text/javascript" src="js/jquery.tipsy.js"></script>
+    <script type="text/javascript" src="js/slimbox2.js"></script>
+
     <script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
     <link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/tipsy.css" type="text/css" media="screen" />
